# Form-Auto-Fill-In

./: .gitignore  LICENSE  README.md  code-format.sh  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: UHMRF.yml  regular_execution.yml
.github/workflows-bin/: setup-chromedriver.sh
.github/workflows-json/: UHMRF.json
docs/: 404.html  UTokyo_Health_Management_Report_Form.html  archives.html  categories.html  index.html  search.html  tags.html  tipuesearch_content.js
docs/author/: iwasakishuto.html
docs/category/: form.html
docs/tag/: utokyo.html
docs/theme/: custom.css
docs/theme/popup/: popup.js  popup.min.css
docs/theme/stylesheet/: dark-theme.min.css  style.min.css
examples/: README.md
examples/answers/: LabCafe.json  UHMRF-1st.json  UHMRF-2nd.json  UHMRF-curt.json
examples/templates/: LabCafe.json  UHMRF-1st.json  UHMRF-2nd.json  UHMRF-curt.json
form_auto_fill_in/: __init__.py  __meta__.py  form.py  main.py  utils.py
form_auto_fill_in/cli/: answer_form.py  show.py
form_auto_fill_in/data/: UHMRF-initial.json  UHMRF.json
form_auto_fill_in/forms/: __init__.py  base.py  google.py  office.py
form_auto_fill_in/utils/: __init__.py  _colorings.py  _data.py  _path.py  _secrets.py  argparse_utils.py  driver_utils.py  generic_utils.py
