[tool.poetry]
name = "form_auto_fill_in"
version = "0.1.0"
description = ""
authors = ["iwasakishuto <cabernet.rock@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
flake8-mypy = "^17.8.0"
isort = "^5.8.0"
pytest = "^6.2.4"

[tool.poetry.scripts]
answer-UHMRF = "form_auto_fill_in.main:UHMRF"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
